[package]
name = "acme-bot-remote"
version = "0.1.0"
edition = "2021"
description = "Remote music player control for acme-bot"
license = "AGPL-3.0-or-later"
authors = ["kmolski <krzysztof.molski29@gmail.com>"]
repository = "https://github.com/kmolski/acme-bot-remote"

[dependencies]
base64 = "0.22.1"
codee = "0.3.3"
leptos = { version = "0.8.8", features = ["csr"] }
leptos_router = { version = "0.8.8" }
leptos-use = "0.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
typify = "0.5.0"
